fixed bug in ios where active menu would cause empty space overflow

--- a/src/App.sass
+++ b/src/App.sass
@@ -25,6 +25,7 @@
     overflow-y: scroll
     -webkit-overflow-scrolling: touch
   &.menu-active
+    overflow-x: hidden
     .App-Burger
       opacity: 0
     .view-wrapper
@@ -32,6 +33,7 @@
       opacity: .3
       overflow-y: hidden
   &.full-image-active
+    overflow-x: hidden
     .App-Burger
       opacity: 0
     .view-wrapper
